# ibis-BOL-extractor

./: .env.example  .gitignore  Makefile  README.md  app.py  classifier.py  config.py  extraction.py  main.py  mcp_server.py  package-lock.json  package.json  process_document.py  pyproject.toml  requirements.txt  schema.py  test_local_vlm.py  utils.py  vercel.json  verifier.py
api/: __init__.py  extract.py  index.py
api/lib/: config.py  extraction.py  registry.py  schema.py
api/static/: app.js  style.css
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
extractors/: base.py  pdfplumber_extractor.py
llm/: vision_extractor.py
parsers/: base.py  generic_parser.py  ltl_bol_parser.py  ocean_bol_parser.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_api_extract.py  test_process_document.py  test_unit.py
