[project]
name = "ibis-pdf-extractor"
version = "2.0.0"
description = "Template-free Vision-LLM pipeline for extracting structured logistics data from Bills of Lading and Delivery Notes."
requires-python = ">=3.10"
license = { text = "Proprietary — Ibis Labs" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".venv", "venv", "env", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length handled by formatter
    "B008", # FastAPI depends on function calls in defaults
]

[tool.ruff.lint.isort]
known-first-party = ["config", "extraction", "schema"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
